fix(hero-slider): improved the z-index hierarchy across multiple components

--- a/src/hero-slider/src/components/AutoplayButton/index.module.css
+++ b/src/hero-slider/src/components/AutoplayButton/index.module.css
@@ -1,5 +1,5 @@
 .Button {
-  z-index: 3;
+  z-index: 4;
   position: absolute;
   color: inherit;
   /* Placeholders */
