--- a/src/hero-slider/src/components/Buttons/index.module.css
+++ b/src/hero-slider/src/components/Buttons/index.module.css
@@ -1,6 +1,6 @@
 .Wrapper {
   position: absolute;
-  z-index: 2;
+  z-index: 3;
 }
 
 @media (max-width: 744px) {
