--- a/src/hero-slider/src/components/MenuNav/index.module.css
+++ b/src/hero-slider/src/components/MenuNav/index.module.css
@@ -1,7 +1,7 @@
 .Wrapper {
   position: absolute;
   display: flex;
-  z-index: 3;
+  z-index: 4;
   width: 90%; /* May be placeholder. */
   margin: 0 auto;
   padding: 0;
