--- a/src/hero-slider/src/components/Nav/index.module.css
+++ b/src/hero-slider/src/components/Nav/index.module.css
@@ -4,7 +4,7 @@
   padding: 0;
   list-style: none;
   position: absolute;
-  z-index: 3;
+  z-index: 4;
   opacity: 0;
   animation: fade-in var(--nav-fade-in-duration, 500) ease-in var(--nav-fade-in-delay, 1000) forwards;
 }
